# Ai-

./: pyproject.toml  run.bat  run_v2.bat  run_v2.sh
addons/_template/: addon.json  addon.py  char_maker.py  prompts.json  system_generator.py  world_setting.txt
addons/asset_uploader/: addon.json  addon.py
addons/character_manager/: addon.json  addon.py
addons/combat_engine/: addon.json  addon.py
addons/gm_director/: addon.json  addon.py
addons/image_generator/: addon.json  addon.py  comfyui_client.py  gui_tab.py  portrait_pipeline.py
addons/portrait_generator/: addon.json  addon.py  gui_tab.py
addons/room_builder/: addon.json  addon.py
addons/session_copilot/: addon.json  addon.py
addons/session_manager/: addon.json  addon.py
addons/session_orchestrator/: addon.json  addon.py
addons/tactical_exorcist/: addon.json  addon.py  char_maker.py  system_generator.py  trpg_data.py  world_setting_compressed.txt
addons/vision_tools/: addon.json  addon.py
addons/vlm_os_agent/: __init__.py  actuator.py  addon.json  addon.py  agent_runtime.py  coord_cache.py  gui_tab.py  kill_switch.py  perceive.py  screen.py  window_focus.py
configs/: .env.example  browser_use_tasks.json  reference_character.json
core/: addon_management_tab.py  asset_uploader.py  browser_use_agent.py  ccfolia_connector.py  char_maker.py  character_manager.py  character_service.py  combat_engine.py  config.py  dependency_checker.py  dice_roller.py  entity_tracker.py  game_state.py  gm_director.py  knowledge_manager.py  launcher.py  launcher_v2.py  lm_client.py  memory_manager.py  persona_builder.py  room_builder.py  schemas.py  session_config.py  session_copilot.py  session_orchestrator.py  system_registry.py  vision_canvas_controller.py  vision_utils.py
core/addons/: __init__.py  addon_base.py  addon_manager.py  addon_models.py  compat.py
core/vtt_adapters/: __init__.py  base_adapter.py  browser_use_adapter.py  ccfolia_adapter.py  foundry_adapter.py  playwright_utils.py  vision_adapter.py
scripts/: phase1_validation.py
tests/: conftest.py  test_addon_manager.py  test_addon_models.py  test_asset_uploader.py  test_browser_use_adapter.py  test_browser_use_agent.py  test_ccfolia_connector.py  test_character_service.py  test_combat_engine.py  test_dice_roller.py  test_entity_tracker.py  test_foundry_adapter.py  test_game_state.py  test_gm_director.py  test_image_generator_addon.py  test_knowledge_manager.py  test_lm_client.py  test_lm_client_structured.py  test_memory_manager.py  test_persona_builder.py  test_portrait_pipeline.py  test_room_builder.py  test_schemas.py  test_session_copilot.py  test_session_orchestrator.py  test_tactical_exorcist_addon.py  test_vision_canvas_controller.py  test_vtt_adapters.py
tests/integration/: __init__.py  conftest.py  test_e2e_full_scenario.py  test_phase1_browser_use.py  test_phase2_assets_vlm.py  test_phase3_room_builder.py  test_phase4_session_copilot.py
tests/vlm_os_agent/: test_actuator.py  test_agent_runtime.py  test_coord_cache.py  test_kill_switch.py  test_perceive.py  test_screen.py  test_vision_utils.py  test_window_focus.py
